- Added the last remaining static graphs. - Some cleanup work + comments