@@ -7,6 +7,7 @@ import com.dat3m.dartagnan.verification.model.Edge;
 import com.dat3m.dartagnan.verification.model.EventData;
 import com.dat3m.dartagnan.verification.model.ExecutionModel;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -14,15 +15,13 @@ import java.util.Set;
 //TODO: This is considered purely static right now (reason computation is static)
 public abstract class DepGraph extends MaterializedGraph {
 
-    public DepGraph() {
-
-    }
+    public DepGraph() { }
 
     protected abstract Map<EventData, Set<EventData>> getDependencyMap();
 
     @Override
     public List<? extends EventGraph> getDependencies() {
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
